// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator Custom 1`] = `
<div
  class="ProgressIndicator-wrapper-0"
  style="width: 50%; height: 50%;"
>
  <div
    class="ProgressIndicator-progressbar-0 ProgressIndicator-stateNone-0"
    style="flex-basis: 40%;"
  />
  <div
    class="ProgressIndicator-progressBarRemaining-0"
  >
    <span
      class="ProgressIndicator-progressBarText-0 ProgressIndicator-progressBarTextColorLow-0 ProgressIndicator-progressBarTextRight-0"
    >
       sdf 
    </span>
  </div>
</div>
`;

exports[`ProgressIndicator ProgressIndicator with state Error 1`] = `
<div
  class="ProgressIndicator-wrapper-0"
>
  <div
    class="ProgressIndicator-progressbar-0 ProgressIndicator-stateError-0"
    style="flex-basis: 0%;"
  />
  <div
    class="ProgressIndicator-progressBarRemaining-0"
  >
    <span
      class="ProgressIndicator-progressBarText-0 ProgressIndicator-progressBarTextColorLow-0 ProgressIndicator-progressBarTextRight-0"
    >
        
    </span>
  </div>
</div>
`;

exports[`ProgressIndicator ProgressIndicator with state Information 1`] = `
<div
  class="ProgressIndicator-wrapper-0"
>
  <div
    class="ProgressIndicator-progressbar-0 ProgressIndicator-stateInformation-0"
    style="flex-basis: 0%;"
  />
  <div
    class="ProgressIndicator-progressBarRemaining-0"
  >
    <span
      class="ProgressIndicator-progressBarText-0 ProgressIndicator-progressBarTextColorLow-0 ProgressIndicator-progressBarTextRight-0"
    >
        
    </span>
  </div>
</div>
`;

exports[`ProgressIndicator ProgressIndicator with state None 1`] = `
<div
  class="ProgressIndicator-wrapper-0"
>
  <div
    class="ProgressIndicator-progressbar-0 ProgressIndicator-stateNone-0"
    style="flex-basis: 0%;"
  />
  <div
    class="ProgressIndicator-progressBarRemaining-0"
  >
    <span
      class="ProgressIndicator-progressBarText-0 ProgressIndicator-progressBarTextColorLow-0 ProgressIndicator-progressBarTextRight-0"
    >
        
    </span>
  </div>
</div>
`;

exports[`ProgressIndicator ProgressIndicator with state Success 1`] = `
<div
  class="ProgressIndicator-wrapper-0"
>
  <div
    class="ProgressIndicator-progressbar-0 ProgressIndicator-stateSuccess-0"
    style="flex-basis: 0%;"
  />
  <div
    class="ProgressIndicator-progressBarRemaining-0"
  >
    <span
      class="ProgressIndicator-progressBarText-0 ProgressIndicator-progressBarTextColorLow-0 ProgressIndicator-progressBarTextRight-0"
    >
        
    </span>
  </div>
</div>
`;

exports[`ProgressIndicator ProgressIndicator with state Warning 1`] = `
<div
  class="ProgressIndicator-wrapper-0"
>
  <div
    class="ProgressIndicator-progressbar-0 ProgressIndicator-stateWarning-0"
    style="flex-basis: 0%;"
  />
  <div
    class="ProgressIndicator-progressBarRemaining-0"
  >
    <span
      class="ProgressIndicator-progressBarText-0 ProgressIndicator-progressBarTextColorLow-0 ProgressIndicator-progressBarTextRight-0"
    >
        
    </span>
  </div>
</div>
`;

exports[`ProgressIndicator State 1`] = `
<div
  class="ProgressIndicator-wrapper-0"
>
  <div
    class="ProgressIndicator-progressbar-0 ProgressIndicator-stateError-0"
    style="flex-basis: 85%;"
  >
    <span
      class="ProgressIndicator-progressBarText-0 ProgressIndicator-progressBarTextColorHigh-0 ProgressIndicator-progressBarTextLeft-0"
    >
        
    </span>
  </div>
  <div
    class="ProgressIndicator-progressBarRemaining-0"
  />
</div>
`;
